tests/golden/type_errors/struct_method_unknown_impl_type.cd
impl Missing {
  fun value(): number { return 1; }
}
